# cribbage

./: Cargo.toml  package-lock.json  package.json
src/: App.vue  ai.rs  card.rs  game.rs  human.rs  main.rs  score_hand.rs  the_play.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: card.rs  cli.rs  game.rs  main.rs  the_play.rs  the_show.rs
